# SSA-Missed-Thrust-Event-Impact-and-Recovery-Assessment

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html  styles.css
examples/sample_run/: phase_guess_search_space.csv  run_summary.json  ssa_selected_candidates.csv
notebooks/: SSA_Prototype_Missed_Thrust_Event_Impact_and_Recovery_Assessment.ipynb
src/ssa_mte/: __init__.py  catalog.py  celestrak.py  cli.py  config.py  phase_guess.py  pipeline.py  plotting.py  propagation.py  rtn.py  ssa_eval.py
tests/: test_catalog.py  test_phase_guess.py  test_rtn.py
